integration_tests/codegen_fail/fail/interface/struct/derive_missing_for_attr.rs
use juniper::{GraphQLInterface, GraphQLObject};

#[derive(GraphQLObject)]
#[graphql(impl = CharacterValue)]
pub struct ObjA {
    id: String,
}

#[derive(GraphQLInterface)]
struct Character {
    id: String,
}

fn main() {}
